fix overflowing search result pages, some columns dropped, others removed by css on smaller screens BLAST results, error on RefSeq results page when coming from NCBI fixed

--- a/plasmid/web/layout.css
+++ b/plasmid/web/layout.css
@@ -139,7 +139,7 @@ img, object, embed, video {
 	width: 100%;
 	display: block;
         margin-top: 1em;
-        margin-bottom: 0em;
+        margin-bottom: 1em;
         display: block;
 }
 #content {
@@ -221,7 +221,7 @@ img, object, embed, video {
 	background-color: #FFF;
 	height: auto;
         margin-top: 1em;
-        margin-bottom: 0em;
+        margin-bottom: 1em;
 }
 #content {
 	clear: none;
